--- a/src/lib/package.json
+++ b/src/lib/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ngx-ui-switch",
-  "version": "2.0.0",
+  "name": "ngx-toggle-switch",
+  "version": "2.0.1",
   "description": "switch button for angular4",
-  "bugs": "https://github.com/webcat12345/ngx-ui-switch/issues",
-  "homepage": "https://github.com/webcat12345/ngx-ui-switch#readme",
-  "repository": "https://github.com/webcat12345/ngx-ui-switch.git",
+  "bugs": "https://github.com/uncommonconcept/ngx-toggle-switch/issues",
+  "homepage": "https://github.com/uncommonconcept/ngx-toggle-switch#readme",
+  "repository": "https://github.com/uncommonconcept/ngx-toggle-switch.git",
   "license": "MIT",
   "author": "webcat12345",
   "keywords": [
