--- a/src/lib/tsconfig-build.json
+++ b/src/lib/tsconfig-build.json
@@ -25,6 +25,6 @@
     "strictMetadataEmit": true,
     "enableSummariesForJit": true,
     "flatModuleOutFile": "index.js",
-    "flatModuleId": "ngx-ui-switch"
+    "flatModuleId": "ngx-toggle-switch"
   }
 }
